force-app/main/default/objects/Group_Product_Gift__c/Group_Product_Gift__c.object-meta.xml
<CustomObject>
    <label>Group Product Gift</label>
    <nameField>
        <label>Group Product Gift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Product Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>