force-app/main/default/objects/Group_Product_Gift__c/fields/Date_Aplly__c.field-meta.xml
<CustomField>
    <fullName>Date_Aplly__c</fullName>
    <label>Date Aplly</label>
    <type>Date</type>
</CustomField>