force-app/main/default/objects/Group_Product_Gift__c/fields/Group_Gift__c.field-meta.xml
<CustomField>
    <fullName>Group_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Gift</label>
    <referenceTo>Group_Gift__c</referenceTo>
    <relationshipLabel>Group Product Gifts</relationshipLabel>
    <relationshipName>Group_Product_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>