force-app/main/default/objects/Group_Product_Gift__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Group Product Gifts</relationshipLabel>
    <relationshipName>Group_Product_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>